ENH: Improve OSSIM CMakeLists for install dir

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -31,14 +31,59 @@ ELSE(OTB_BINARY_DIR)
   FIND_PATH(OTB_DATA_ROOT OTBData.readme ${OTBTesting_SOURCE_DIR}/Data $ENV{OTB_DATA_ROOT})
   MARK_AS_ADVANCED(OTB_DATA_ROOT)
 
+  OPTION(OTB_DATA_USE_LARGEINPUT "Use Large inputs images test." OFF)
+  MARK_AS_ADVANCED(OTB_DATA_USE_LARGEINPUT)
+  IF(OTB_DATA_USE_LARGEINPUT)
+    FIND_PATH(OTB_DATA_LARGEINPUT_ROOT OTBData.readme $ENV{OTB_DATA_LARGEINPUT_ROOT})
+    MARK_AS_ADVANCED(OTB_DATA_LARGEINPUT_ROOT)
+  ENDIF(OTB_DATA_USE_LARGEINPUT)
   # Find OTB and load its settings.
   FIND_PACKAGE(OTB)
   IF(OTB_FOUND)
     INCLUDE(${OTB_USE_FILE})
-    SUBDIRS(Code Fa Utilities)
+#    SUBDIRS(Code Fa Utilities)
+    SUBDIRS(Code)
   ELSE(OTB_FOUND)
     MESSAGE("OTB not found.  Please set OTB_DIR")
   ENDIF(OTB_FOUND)
+
+  IF(NOT OTB_INSTALL_BIN_DIR)
+    SET(OTB_INSTALL_BIN_DIR "/bin")
+  ENDIF(NOT OTB_INSTALL_BIN_DIR)
+
+  IF(NOT OTB_INSTALL_LIB_DIR)
+    SET(OTB_INSTALL_LIB_DIR "/lib/otb")
+  ENDIF(NOT OTB_INSTALL_LIB_DIR)
+
+  IF(NOT OTB_INSTALL_DATA_DIR)
+    SET(OTB_INSTALL_DATA_DIR "/share/otb")
+  ENDIF(NOT OTB_INSTALL_DATA_DIR)
+
+  IF(NOT OTB_INSTALL_INCLUDE_DIR)
+    SET(OTB_INSTALL_INCLUDE_DIR "/include/otb")
+  ENDIF(NOT OTB_INSTALL_INCLUDE_DIR)
+
+  STRING(REGEX REPLACE "^/" "" OTB_INSTALL_LIB_DIR_CM24 "${OTB_INSTALL_LIB_DIR}")
+  STRING(REGEX REPLACE "^/" "" OTB_INSTALL_BIN_DIR_CM24 "${OTB_INSTALL_BIN_DIR}")
+  STRING(REGEX REPLACE "^/" "" OTB_INSTALL_INCLUDE_DIR_CM24 "${OTB_INSTALL_INCLUDE_DIR}")
+
+  MACRO(OTB_ADD_EXECUTABLE name sources libraries)
+    ADD_EXECUTABLE(${name} ${sources})
+    TARGET_LINK_LIBRARIES(${name}  ${libraries})
+    IF(OTB_CPP_CHECK_SOURCE_FILE)
+      FOREACH( file ${sources})
+        ADD_CUSTOM_COMMAND( TARGET ${name}
+                            PRE_BUILD
+                            COMMAND ${OTB_CPP_CHECK_PROG}
+                            ARGS ${CMAKE_CURRENT_SOURCE_DIR}/${file}
+                            DEPENDS ${libraries}
+                            COMMENT "============== C++ checking ${file} source file...  =================="
+                            VERBATIM )
+      ENDFOREACH(file)
+    ENDIF(OTB_CPP_CHECK_SOURCE_FILE)
+  ENDMACRO(OTB_ADD_EXECUTABLE)
+
+
 ENDIF(OTB_BINARY_DIR)
 
 IF(OTB_COMPILE_WITH_FULL_WARNING)
@@ -47,3 +92,4 @@ IF(OTB_COMPILE_WITH_FULL_WARNING)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OTB_FULL_WARNING_LIST_PARAMETERS}")
   ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 ENDIF(OTB_COMPILE_WITH_FULL_WARNING)
+
