ENH: Add external libraries configurations (Expat, Boost, OpenThread, GDAL) in UseOTB.cmake file for applications users.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1037,6 +1037,7 @@ IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
     ${OTB_BINARY_DIR}/OTBBuildSettings.cmake
     ${OTB_BINARY_DIR}/OTBLibraryDepends.cmake
     ${OTB_BINARY_DIR}/UseOTB.cmake
+    ${OTB_SOURCE_DIR}/FindOpenThreads.cmake
     DESTINATION ${OTB_INSTALL_PACKAGE_DIR_CM24}
     COMPONENT Development
     )
