--- a/OTBConfig.cmake.in
+++ b/OTBConfig.cmake.in
@@ -133,6 +133,17 @@ SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES "@OTB_IO_UTILITIES_DEPENDENT_LIBRARIES@
 # Option use external BOOST.
 SET(OTB_USE_EXTERNAL_BOOST "@OTB_USE_EXTERNAL_BOOST@")
 
+# Option use external EXPAT.
+SET(OTB_USE_EXTERNAL_EXPAT "@OTB_USE_EXTERNAL_EXPAT@")
+
+# Option use external OpenThread.
+SET(OTB_USE_EXTERNAL_OPENTHREADS "@OTB_USE_EXTERNAL_OPENTHREADS@")
+
+# Option use external GDAL.
+SET(OTB_USE_EXTERNAL_GDAL "@OTB_USE_EXTERNAL_GDAL@")
+
+
+
 # Internationalization
 SET(OTB_I18N "@OTB_I18N@")
 SET(OTB_LANG "@OTB_LANG@")
