--- a/UseOTB.cmake.in
+++ b/UseOTB.cmake.in
@@ -82,3 +82,47 @@ IF(OTB_USE_EXTERNAL_ITK)
 INCLUDE(${OTB_ITK_DIR}/ITKConfig.cmake)
 INCLUDE(${ITK_USE_FILE})
 ENDIF(OTB_USE_EXTERNAL_ITK)
+
+#WHERE TO FIND EXPAT
+IF(OTB_USE_EXTERNAL_EXPAT)
+    FIND_PACKAGE(EXPAT)
+    IF(EXPAT_FOUND)
+        # Control expat compatibility
+        INCLUDE_DIRECTORIES(BEFORE ${EXPAT_INCLUDE_DIR})
+        LINK_DIRECTORIES( ${EXPAT_LIBRARY} )
+    ELSE(EXPAT_FOUND)
+        MESSAGE(FATAL_ERROR
+                  "Cannot use OTB project without lib EXPAT. Please set EXPAT_DIR or rebuild OTB and set OTB_USE_EXTERNAL_EXPAT OFF to use INTERNAL EXPAT set on OTB/Utilities repository.")
+    ENDIF(EXPAT_FOUND)
+ENDIF(OTB_USE_EXTERNAL_EXPAT)
+
+
+#WHERE TO FIND OPENTHREAD
+IF(OTB_USE_EXTERNAL_OPENTHREADS)
+    IF(EXISTS "${CMAKE_ROOT}/Modules/FindOpenThreads.cmake")
+        FIND_PACKAGE(OpenThreads)
+    ELSEIF(EXISTS "${CMAKE_ROOT}/Modules/FindOpenThreads.cmake")
+        INCLUDE(${OTB_LIBRARY_DIRS}/FindOpenThreads.cmake)
+    ENDIF(EXISTS "${CMAKE_ROOT}/Modules/FindOpenThreads.cmake")
+
+    INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
+    LINK_DIRECTORIES( ${OPENTHREADS_LIBRARY} )
+ENDIF(OTB_USE_EXTERNAL_OPENTHREADS)
+
+
+#WHERE TO FIND BOOST
+IF(OTB_USE_EXTERNAL_BOOST)
+  FIND_PACKAGE(Boost)
+  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+ENDIF(OTB_USE_EXTERNAL_BOOST)
+
+
+#WHERE TO FIND GDAL
+IF(OTB_USE_EXTERNAL_GDAL)
+  FIND_PACKAGE(GDAL)
+
+  IF (NOT GDAL_FOUND)
+    FIND_PATH(GDAL_INCLUDE_DIR gdal.h $ENV{GDAL_INCLUDE_DIR} /usr/include/gdal)
+    FIND_LIBRARY(GDAL_LIBRARY NAMES gdal gdal1.5.0 gdal1.4.0 gdal1.3.2 PATHS /usr/lib/gdal)
+  ENDIF(NOT GDAL_FOUND)
+ENDIF(OTB_USE_EXTERNAL_GDAL)
