ENH:config file with path in cmakedefine (without singleton)

--- a/OTBConfig.cmake.in
+++ b/OTBConfig.cmake.in
@@ -148,3 +148,6 @@ SET(OTB_USE_EXTERNAL_GDAL "@OTB_USE_EXTERNAL_GDAL@")
 SET(OTB_I18N "@OTB_I18N@")
 SET(OTB_LANG "@OTB_LANG@")
 SET(OTB_LANG_LOCATION "@OTB_LANG_LOCATION@")
+
+#Configuration file
+SET(OTB_CONFIG "@OTB_BINARY_DIR@")
