ENH:add_custom_command to configfile work in progress

--- a/Utilities/otbconfigfile/CMakeLists.txt
+++ b/Utilities/otbconfigfile/CMakeLists.txt
@@ -3,8 +3,8 @@ PROJECT(otbConfigFilelib)
 FILE(GLOB otbConfigFilelib_SRCS "*.cpp")
 FILE(GLOB otbConfigFilelib_HDRS "*.h")
 SET(otbConfigFile_DEFAULT otb_config.inp)
-ADD_LIBRARY(otbConfigFile ${otbConfigFilelib_SRCS} ${otbConfigFile_DEFAULT})
-TARGET_LINK_LIBRARIES(otbConfigFile)
+ADD_LIBRARY(otbConfigFile ${otbConfigFilelib_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/${otbConfigFile_DEFAULT})
+TARGET_LINK_LIBRARIES(otbConfigFile )
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(otbConfigFile PROPERTIES ${OTB_LIBRARY_PROPERTIES})
 ENDIF(OTB_LIBRARY_PROPERTIES)
@@ -25,4 +25,11 @@ IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
 ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
 
 #copy the configuration file in the binary directory
-INSTALL(FILES ${otbConfigFile_DEFAULT} DESTINATION ${CMAKE_INSTALL_PREFIX})
+ADD_CUSTOM_COMMAND(
+  OUTPUT ${OTB_BINARY_DIR}/${otbConfigFile_DEFAULT}
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/${otbConfigFile_DEFAULT} ${OTB_BINARY_DIR}/${otbConfigFile_DEFAULT}
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${otbConfigFile_DEFAULT}
+  COMMENT "Copy configuration file to OTB_BINARY_DIR"
+  )
+
+INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${otbConfigFile_DEFAULT} DESTINATION ${CMAKE_INSTALL_PREFIX})
