--- a/UseOTB.cmake.in
+++ b/UseOTB.cmake.in
@@ -125,4 +125,5 @@ IF(OTB_USE_EXTERNAL_GDAL)
     FIND_PATH(GDAL_INCLUDE_DIR gdal.h $ENV{GDAL_INCLUDE_DIR} /usr/include/gdal)
     FIND_LIBRARY(GDAL_LIBRARY NAMES gdal gdal1.5.0 gdal1.4.0 gdal1.3.2 PATHS /usr/lib/gdal)
   ENDIF(NOT GDAL_FOUND)
+  INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})
 ENDIF(OTB_USE_EXTERNAL_GDAL)
