--- a/Code/GeospatialAnalysis/CMakeLists.txt
+++ b/Code/GeospatialAnalysis/CMakeLists.txt
@@ -20,6 +20,6 @@ IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
   FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
   FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
   INSTALL(FILES ${__files1} ${__files2}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Gui
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/GeospatialAnalysis
     COMPONENT Development)
 ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
