COMP: Adding platform dependent lib to visualisation targets

--- a/Code/Gui/CMakeLists.txt
+++ b/Code/Gui/CMakeLists.txt
@@ -12,7 +12,7 @@ ENDIF(APPLE AND BUILD_SHARED_LIBS)
 
 
 ADD_LIBRARY(OTBGui ${OTBGui_SRCS})
-TARGET_LINK_LIBRARIES (OTBGui OTBCommon ${FLTK_LIBRARIES})
+TARGET_LINK_LIBRARIES (OTBGui OTBCommon ${OTB_VISU_GUI_LIBRARIES})
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBGui PROPERTIES ${OTB_LIBRARY_PROPERTIES})
 ENDIF(OTB_LIBRARY_PROPERTIES)
