--- a/Code/Visu/CMakeLists.txt
+++ b/Code/Visu/CMakeLists.txt
@@ -10,7 +10,7 @@ IF(APPLE AND BUILD_SHARED_LIBS)
 ENDIF(APPLE AND BUILD_SHARED_LIBS)
 
 ADD_LIBRARY(OTBVisu ${OTBVisu_SRCS})
-TARGET_LINK_LIBRARIES (OTBVisu OTBGui OTBCommon ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES})
+TARGET_LINK_LIBRARIES (OTBVisu OTBGui OTBCommon ${OTB_VISU_GUI_LIBRARIES})
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBVisu PROPERTIES ${OTB_LIBRARY_PROPERTIES})
 ENDIF(OTB_LIBRARY_PROPERTIES)
