--- a/Examples/Tutorials/CMakeLists.txt
+++ b/Examples/Tutorials/CMakeLists.txt
@@ -23,7 +23,12 @@ IF(OTB_USE_VISU_GUI)
   ADD_EXECUTABLE(SimpleViewer SimpleViewer.cxx )
   TARGET_LINK_LIBRARIES(SimpleViewer OTBCommon OTBIO OTBGui OTBVisualization ${OTB_VISU_GUI_LIBRARIES})
 
-  SUBDIRS(BasicApplication)
+# The basic application tutorial makes use of the otbApplicationsCommon library which is built in OTB-Applications package.
+# Therefore this tutorial will not compile until we move the OTBApplcationsCommon lib to the OTB. Until then, 
+# the following line will be commented out.
+# SUBDIRS(BasicApplication)
+
+
 ENDIF(OTB_USE_VISU_GUI)
 
 ADD_EXECUTABLE(OrthoFusion OrthoFusion.cxx )
