BUG: fix closing statement in CMakeLists.txt for old cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,19 +100,19 @@ IF(WIN32)
   IF (MSVC)
     IF(OTB_BUILD_PEDANTIC)
       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-    ENDIF()
+    ENDIF(OTB_BUILD_PEDANTIC)
 
     IF (MSVC80)
       ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
       ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_WARNING)
-    ENDIF()
-  ENDIF()
-ELSE()
+    ENDIF(MSVC80)
+  ENDIF(MSVC)
+ELSE(WIN32)
   IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     IF(OTB_BUILD_PEDANTIC)
       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic")
-    ENDIF()
-  ENDIF()
+    ENDIF(OTB_BUILD_PEDANTIC)
+  ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
 ENDIF(WIN32)
 #-----------------------------------------------------------------------------
 
